tests/valid/test8.c
float f1 = 1.1;
float f2 = 2.2;
float f3;

f3 = f1 * f2 + 10.5 / (f2 - f1);
