tests/errors/multi_error_6.c
float result;
result = calculate(10); // Functions not supported

int a = 5;
if (a > 0)
    a = a + 1; // Braces mandatory in grammar?

int a = 10; // Redeclaration
